# SequentialEGM

./: .Rhistory  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Add-Refs.bib  CEF2023_SD_Alan_Lujan.tex  CITATION.cff  EGMN-Slides.tex  EGMN-titlepage.dep  EGMN-titlepage.tex  EGMN.bib  EGMN.dep  EGMN.tex  HAFiscal-contents.texinput  HAFiscal-titlepage.dep  HAFiscal-titlepage.tex  HAFiscal.dep  HAFiscal.tex  LICENSE  README.md  SequentialEGM-Slides.tex  SequentialEGM-titlepage.dep  SequentialEGM-titlepage.tex  SequentialEGM.dep  SequentialEGM.tex  Subfiles.texinput  _config.yml  _toc.yml  all_shortcuts.sty  appendix.html  appendix.json  build.sh  citation.bib  clean_md.py  conclusion.html  conclusion.json  conditions.html  conditions.json  config.json  econtexRoot.texinput  (+44 more)
.github/: CONTRIBUTING.md
Code/: ConsLaborPortfolioModel.py  ConsPensionContribModel.py  ConsPensionRetirementContribModel.py  ConsRetPenContribModel.py  GPR_example.ipynb  GPR_example.py  LifecyclePensionRetirement.ipynb  PensionContrib.ipynb  PensionContrib.py  PensionContrib_baseline.ipynb  PensionContrib_baseline.py  SeparableConsLaborModel.py  example_ConsLaborPortfolioModel.ipynb  example_ConsLaborPortfolioModel.py  example_ConsRetPenContribModel.ipynb  example_ConsSeparableLaborModel.py  fast.py  params.py
Figures/: LorenzPoints.xbb
Highlighted/: README.md
Paper/: 0Titlepage.md  0_titlepage.md  1Intro.md  1_intro.md  2Method.md  2_method.md  3HigherDims.md  3HigherDims.tex  3_multidimensional.md  4UnstructuredInterp.md  4_multinterp.md  5WhentoUse.md  5_conditions.md  _toc.yml  (+7 more)
(+1010 files in other folders)
