[project]
name = "sequentialegm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black[jupyter]>=25.9.0",
    "econ-ark",
    "estimagic>=0.5.1",
    "jupyter>=1.1.1",
    "jupytext>=1.17.3",
    "mystmd>=1.6.2",
    "numba>=0.62.1",
    "numpy>=2.3.3",
    "pre-commit>=4.3.0",
    "ruff>=0.13.3",
    "scipy>=1.16.2",
]

[tool.uv.sources]
econ-ark = { git = "https://github.com/alanlujan91/HARK", rev = "map_coordinates" }
